# meshcore

./: .gitignore  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  upload.sh
.claude/: BUILD-AND-CI.md  Build-And-CI.md  COMPONENTS.md  CRYPTO.md  Components.md  Crypto.md  DATA-FLOWS.md  Data-Flows.md  GUIDELINES.md  Guidelines.md  PITFALLS.md  Pitfalls.md  TESTING.md  Testing.md  WORKFLOW.md  Workflow.md
.gitea/: PULL_REQUEST_TEMPLATE.md
.gitea/workflows/: build.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  privacy.yml
assets/: README.md  generate_icon.py  metadata.json
components/mc_common/: CMakeLists.txt  app_config.h  config_types.h  diag.c  diag.h  emoji_table.c  emoji_table.h  ui_state.h
components/mc_crypto/: CMakeLists.txt  mc_crypto.c  mc_crypto.h  mc_crypto_dm.c
components/mc_domain/: CMakeLists.txt  channel_share.c  channel_share.h  channels.c  channels.h  chat.c  chat.h  contacts.c  contacts.h  coverage.c  coverage.h  diag.c  diag.h  history.c  history.h  identity.c  identity.h  nodes.c  nodes.h  settings_nvs.c  settings_nvs.h  sounds.c  sounds.h
components/mc_io/: CMakeLists.txt  cert_gen.c  cert_gen.h  gps.c  nvs_helpers.c  nvs_helpers.h
components/mc_net/: CMakeLists.txt  ble_companion.c  ble_companion.h  companion_transport.c  companion_transport.h  gps_task.c  gps_task.h  http_server.c  http_server.h  map.c  map.h  wifi_keepalive.c  wifi_keepalive.h
components/mc_proto/: CMakeLists.txt  advert_sign.c  advert_sign.h  diag_decode.c  diag_decode.h  gps.h  gps_parser.c  gps_parser.h  region_limits.c  region_limits.h  trace.c  trace.h
components/mc_proto/companion-radio-protocol/: mc_companion_command_parser.c  mc_companion_command_parser.h  mc_companion_serial_interface.c  mc_companion_serial_interface.h
components/mc_proto/meshcore/payload/: advert.h  grp_txt.c  grp_txt.h
components/mc_radio/: CMakeLists.txt  radio.c  radio.h  radio_system_protocol_client.c  radio_system_protocol_client.h
components/mc_rx/: CMakeLists.txt  mc_rx.c  mc_rx.h
components/mc_ui/: CMakeLists.txt  emoji.c  emoji.h  input.c  lvgl_port.c  lvgl_port.h  lvgl_ui.c  lvgl_ui.h  render.c  render.h  render_about.c  render_channel.c  render_chat.c  render_home.c  render_internal.h  render_map.c  render_nodes.c  render_settings.c  render_settings_icons.c  render_settings_icons.h  render_toolbox.c  render_toolbox_coverage.c  render_toolbox_log.c
components/tanmatsu-lora/: idf_component.yml  lora.c
components/tanmatsu-lora/include/: lora.h
docs/: ARCHITECTURE.md  Architecture.md  Blueprint.md  C6-Radio.md  CHANGELOG.md  CONTRIBUTING.md  Components.md  Firmware-Versions.md  GPS-Sources.md  Maps.md  MeshCore-Protocol.md  Overview.md  README.md  Releases.md  Screenshots.md  Settings-NVS.md  Sounds.md  UI-UX.md  architecture-proposal.md  devlog-en.html  devlog-en.md  devlog-nl.md
docs/architecture/: Architecture.md  Blueprint.md  Components.md  Overview.md
docs/features/: GPS-Sources.md  Maps.md  Screenshots.md  Sounds.md  Toolbox-Coverage-Test.md  Toolbox.md  UI-UX.md
docs/guides/: Build-Deploy.md  CONTRIBUTING.md  Getting-Started.md  Map-Tiles-MOBAC.md  Releases.md
docs/reference/: Firmware-Versions.md  MeshCore-Protocol.md  SD-Card-Layout.md  Settings-NVS.md
docs/wiki/: Architecture.md  Build-Deploy.md  C6-Radio.md  Firmware-Versions.md  GPS-Sources.md  Home.md  Maps.md  MeshCore-Protocol.md  SD-Card-Layout.md  Settings-NVS.md  UI-UX.md
main/: CMakeLists.txt  app_config.h  ble_companion.c  ble_companion.h  cert_gen.c  cert_gen.h  channels.c  channels.h  chat.c  chat.h  companion_transport.c  config_types.h  contacts.c  contacts.h  ed25519.c  ed25519.h  emoji.c  emoji.h  emoji_bitmaps.c  emoji_table.h  gps.c  gps_parser.h  gps_task.c  gps_task.h  history.c  history.h  http_server.c  identity.c  identity.h  idf_component.yml  input.c  input.h  main.c  map.h  nodes.c  nodes.h  nvs_helpers.c  nvs_helpers.h  radio.c  radio.h  (+16 more)
main/companion-radio-protocol/: mc_companion.h  mc_companion_server.c  mc_companion_server.h
main/meshcore/: packet.c  packet.h
main/meshcore/payload/: advert.c
partition_tables/: 16M.csv
scripts/: release.sh  upload.sh
sdkconfigs/: general  tanmatsu
tests/: Makefile  check-arch-rules.sh  check-cppcheck.sh  check-structure.sh  test_advert_sign.c  test_channel_share.c  test_companion_protocol.c  test_diag_decode.c  test_ed25519.c  test_gps_nmea.c  test_gps_parser_edge  test_gps_parser_edge.c  test_integration_message  test_integration_message.c  test_mc_crypto.c  test_mc_crypto_dm.c  test_meshcore_packet.c  test_meshcore_payloads.c  test_region_limits.c  test_region_lookup  test_region_lookup.c  test_trace.c
tests/lint/: check-arch-rules.sh  check-cppcheck.sh  check-format.sh  check-structure.sh  check-test-wiring.sh
tests/stubs/: esp_random.h
