# mc_ui — presentation: pax renderers, input handling, emoji picker.
# See docs/Components.md.
idf_component_register(
    SRCS
        "render.c"
        "render_settings.c"
        "render_settings_icons.c"
        "render_nodes.c"
        "render_chat.c"
        "render_channel.c"
        "render_home.c"
        "render_about.c"
        "render_map.c"
        "render_toolbox.c"
        "render_toolbox_log.c"
        "render_toolbox_coverage.c"
        "input.c"
        "emoji.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        mc_common
        mc_domain
        mc_radio
        mc_net
        robotman2412__pax-gfx
        badge-bsp
        freertos
    PRIV_REQUIRES
        mc_io
        mc_proto
        mc_rx
        vendor
        wifi-manager
        esp_app_format
)
