# mc_ui — presentation: LVGL views, input handling, non-rendering registries.
# See docs/Components.md.
idf_component_register(
    SRCS
        "render.c"
        "render_settings.c"
        "render_home.c"
        "render_toolbox.c"
        "render_toolbox_log.c"
        "input.c"
        "emoji.c"
        "lvgl_port.c"
        "lvgl_ui.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        mc_common
        mc_domain
        mc_radio
        mc_net
        robotman2412__pax-gfx
        lvgl
        badge-bsp
        freertos
        esp_timer
    PRIV_REQUIRES
        mc_io
        mc_proto
        mc_rx
        vendor
        wifi-manager
        esp_app_format
)
